       This behavior matches that currently used by IE and Navigator.

Limitations:
    1. JDK 1.2 or higher is required
    2. JavaScript support does not include document.write and some DOM properties


Revision History:
22-Aug-2002

Acknowledgements:
    Thanks to Michael Reardon for implementing the ServletUnit header method handling code and session.getAttributeNames

Additions:
    1. ServletUnit now supports HttpServletResponse header methods: setHeader, addHeader, setIntHeader, addIntHeader,
       setDateHeader, and addDateHeader.
    2. ServletUnit now supports HttpSession.getAttributeNames.
    3. WebImage now supports a read-only 'altText' property.
    4. WebResponse and TableCell now support getImageWithAltText to find an image with a specified value in its 'alt' attribute.

21-Aug-2002

Additions:
    1. JavaScript - Window.confirm is now supported. By default, it always returns true. Users may change this by supplying an
       implementation of DialogResponder to the WebClient.
    2. JavScript - Window.prompt is now supported. By default, it always returns the default value. Users may change this by supplying an
       implementation of DialogResponder to the WebClient.

20-Aug-2002

Problems fixed:
    1. JavaScript - HTML comments prevented JavaScript from working
    2. JavaScript - Errors were reported if Rhino was not present in the classpath
    3. Fixed handling of error statuses when information is still sent on input stream

Additions:
    1. JavaScript - Added Checkbox.value property, along with Checkbox.defaultChecked and Input.name
    2. JavaScript - Added Radio.value, Radio.checked, and Radio.defaultChecked properties
    3. JavaScript - Added Radio.onClick event support

19-Aug-2002

Additions:
    1. WebForm.getButtons() now returns all form buttons, including reset buttons and generic buttons.
    2. JavaScript: The "onClick" event is now supported for generic form buttons
    3. JavaScript: Form.submit() is now working

